# customer-feedback-app

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  DASHBOARD_SUMMARY.md  DASHBOARD_TESTING_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_COMMANDS.md  DEPLOYMENT_INSTRUCTIONS.md  LOCAL_TESTING_GUIDE.md  PROJECT_RULES.md  README.md  REFACTORING_STATUS.md  RENDER_DEPLOYMENT_SETTINGS.md  RENDER_ENV_VARIABLES.md  WEB_SERVICE_PRODUCTION_CONFIG.md  package-lock.json  package.json  render-services.json  render.yaml  requirements-dev.txt  test-integration.js  verify-deployment.py  verify-deployment.sh
api/: .env.example  .flake8  build-worker.sh  build.sh  pyproject.toml  render.yaml  requirements.txt  start-worker.sh  start.sh  test_event_loop_monitor.py  test_excel_formatter.py  test_hybrid.py  test_nps_calculator.py  test_openai_integration.py  test_parallel_processing.py  test_parser_integration.py  test_shifted_default.py  test_ultra_optimized.py
api/app/: config.py  main.py
api/app/adapters/: hybrid_analyzer.py  local_sentiment.py  openai_client.py
api/app/adapters/openai/: __init__.py  analyzer.py  async_analyzer.py  client.py  optimized_schema.py  parallel_processor.py  schemas.py  utils.py
api/app/core/: aggregation.py  cache_manager.py  excel_formatter.py  file_parser.py  flexible_parser.py  nps_calculator.py  unified_aggregation.py  unified_file_processor.py  validation.py
api/app/infrastructure/: cache.py
api/app/routes/: export.py  health.py  metrics.py  results.py  status.py  upload.py
api/app/schemas/: ai_schemas.py  analysis.py  base.py  export.py  processing.py  status.py  upload.py
api/app/services/: __init__.py  aggregation_service.py  analysis_service.py  deduplication_service.py  efficient_deduplication.py  export_service.py  metrics_service.py  status_service.py  storage_service.py
api/app/services/export/: __init__.py  base_exporter.py  csv_exporter.py  excel_basic_exporter.py  excel_styled_exporter.py  export_facade.py
api/app/services/export/formatters/: __init__.py  dataframe_formatter.py  excel_styles.py
api/app/services/export/sheet_builders/: __init__.py  details_builder.py  emotions_builder.py  pain_points_builder.py  summary_builder.py
api/app/utils/: event_loop_manager.py  event_loop_monitor.py  logging.py  memory_monitor.py  openai_logging.py
api/app/workers/: celery_app.py  tasks.py
api/tests/: test_architecture.py
api/tests/services/export/: __init__.py  test_csv_exporter.py  test_excel_basic_exporter.py  test_excel_styled_exporter.py  test_export_facade.py
config/: README.md
docs/: CICD.md  FRONTEND_ARCHITECTURE.md  README.md  RENDER_DEPLOYMENT.md  SERVICE_INTEGRATION.md  TECHNICAL_DOCUMENTATION.md  deployment.md
local-reports/: PIPELINE_OPTIMIZATION_SAVEPOINT.md  system-routing-architecture.md
tests/: tests-suggestion.md
(+152 files in other folders)
